Change history
--------------

Beta 5
======

** Core ** 
- Moved action collection to ControllerMetaDescriptor class, using new method that does not require ScreenCommonPublicMethods.

- Moved ControllerDescriptorBuilder creation to ProcessEngineFactory to ensure ControllerDescriptors are only created once

- ITrace and Trace property added to IRailsEngineContext (kudos to Chad Humphries)

- Hierarchy of areas support (kudos to Fabio Batista)

- Support for [Layout] attribute on Actions, so actions can override 
  the Controller's specified layout (by Fabio Batista, rev 1459)

- PaginationHelper introduced

- Added IServerUtility.JavaScriptEscape() (kudos to Chad Humphries)

- Added DataBindAttribute.Exclude - A comma separated list of property names 
  to exclude from databinding (kudos to Chad Humphries)

- Added IResponse.BinaryWrite() and CreateCookie( HttpCookie ) overload

- Added IServerUtility.MapPath()

- Added IRailsContext.ApplicationPhysicalPath

- Added to HtmlHelper:
  - InputCheckbox
  - InputRadio
  - InputFile
  - InputButton
  - Form(action, attribtes) overload

- Added more fine-grained support for ExecuteEnum in Filters (by Fabio Batista, rev 1286-1287)

    The values are now: BeforeAction, AfterAction, AfterRendering and Always.
  
- Support for nullable types in SmartDispatcherController, useful for
  detecting missing ValueType parameters. Works with Nullables library, still
  not working on .NET 2.0 Nullables (by Fabio Batista, rev 1297 and 1363)

  Example of use:

    // .NET 1.1
    public void CreateTicket(string name, NullableDateTime date, NullableInt32 priority)
    {
      if (name == null || name.Length == 0) throw new MissingFieldException();
      if (!date.HasValue) throw new MissingFieldException();
      if (!priority.HasValue) throw new MissingFieldException();
    }

    // .NET 2.0 (NOT WORKING YET)
    public void CreateTicket(string name, DateTime? date, int? priority)
    {